--- a/craft/templates/commerce/checkout/payment.html
+++ b/craft/templates/commerce/checkout/payment.html
@@ -40,7 +40,7 @@
       {% if cart.paymentMethodId %}
         <form method="POST" class="form-horizontal">
           <input type="hidden" name="action" value="commerce/payments/pay"/>
-          <input type="hidden" name="redirect" value="/commerce/customer/order?number={number}"/>
+          <input type="hidden" name="redirect" value="commerce/customer/order?number={number}"/>
           <input type="hidden" name="cancelUrl" value="/commerce/checkout/payment"/>
           {{ getCsrfInput() }}
 
