--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -808,7 +808,6 @@
 
 #awards
   .awards-list
-    margin-top: -120px
     text-align: center
     @include breakpoint($tablet)
       margin-top: 0
@@ -889,6 +888,8 @@
           width: 660px
         &.full-content
           width: 100%
+          h4
+            font-size: 50px
         ul
           padding: 0
       .badges
