--- a/craft/templates/product.html
+++ b/craft/templates/product.html
@@ -88,7 +88,7 @@
             <span>{{ "Next" | t }}: <a href="{{link.url}}">{{link.title}}</a></span>
           {% endif %}
 
-          <span><a href="{{ url('products') }}">{{ "All" | t }} {{ "Wines and Oils" | t }}</a></span>
+          <span><a href="{{ url('products') }}">{{ "All" | t }}</a></span>
       </div>
     </div>
 
