Remove language on mobile

--- a/public/css/sass/shared.sass
+++ b/public/css/sass/shared.sass
@@ -193,6 +193,7 @@ nav
   line-height: 26px
   margin-top: 9px
   .localization
+    display: none
     @include breakpoint($tablet)
       display: inline-block
   .cart
