adjusts regexp to not break achor links in add. details

--- a/craft/templates/product.html
+++ b/craft/templates/product.html
@@ -57,7 +57,7 @@
         <h2>{{ "Additional" | translate }}</h2>
         {{ product.wineAdditionalDetails
           | replace('/<(.?)strong>/', '')
-          | replace('/(?<=>)(.*?):/', "<strong>$1:</strong>")
+          | replace('/(?<=>)(?!<[a^>])(.*?):/', "<strong>$1:</strong>")
           | raw }}
         {% endif %}
       </div>
