makes mobile header sticky

--- a/public/css/sass/shared.sass
+++ b/public/css/sass/shared.sass
@@ -35,7 +35,7 @@ header
 .mobile-controls
   position: absolute
   left: 12px
-  top: 12px
+  top: 18px
   font-size: 24px
   color: #fff
   @include breakpoint($tablet)
@@ -62,6 +62,10 @@ nav
   margin-bottom: -120px
   z-index: 1
   position: relative
+  @include breakpoint($phone-only)
+    position: fixed
+    height: 70px
+    width: 100%
 
 .logo
   width: 225px
@@ -73,6 +77,11 @@ nav
   margin-left: -112px
   top: 24px
   z-index: 2
+  @include breakpoint($phone-only)
+    background-size: 75%
+    background-position: center
+    background-repeat: no-repeat
+    top: 0px
   @include breakpoint($tablet)
     top: 8px
   h1, h3
