--- a/public/css/sass/shared.sass
+++ b/public/css/sass/shared.sass
@@ -183,17 +183,13 @@ nav
 
 .top-menu
   box-sizing: border-box
+  background: #000
   height: 42px
-  margin-bottom: -42px
-  z-index: 2
-  position: relative
   line-height: 42px
   padding: 0 15px
   display: flex
-  width: 20%
-  float: right
   flex-flow: row wrap
-  justify-content: flex-end
+  justify-content: space-between
 
 .options-menu
   text-transform: uppercase
