--- a/craft/templates/partials/product_preview.html
+++ b/craft/templates/partials/product_preview.html
@@ -10,4 +10,30 @@
   <h3>{{ item.title }}</h3>
   <p>{{ item.wineSummary }}</p>
   <a class="learn-more" href="{{item.getUrl()}}">{{"Learn More" | t}}</a>
+  <!--  -->
+  <div class="buy-reveal">
+    <a class="faux-buy">{{ "Purchase" | t }}</a>
+    {% for variant in products %}
+      {% if variant.sku matches '{(eu$)|(us$)}' %}
+        <form method="POST">
+          <input type="hidden" name="action" value="commerce/cart/updateCart">
+          <input type="hidden" name="redirect" value="commerce/cart">
+          <input type="hidden" name="qty" value="1" min="1" max="10">
+          <input type="hidden" value="{{ currencyCode }}" name="paymentCurrency" >
+          <input type="hidden" value="{{ variant.purchasableId }}" name="purchasableId" />
+          {{ getCsrfInput() }}
+          <span class="price">{{ variant.price|commerceCurrency(currencyCode,convert=true,format=true) }}</span>
+          {% if variant.stock <= 0 and variant.unlimitedStock == false %}
+            <input class="buy" type="submit" disabled="disabled" value="{{ "Out of Stock" | t }}" />
+            <a data-product="{{variant.sku}}" href="#">{{ "Notify me when this wine becomes available again" | t }}</a>
+          {% else %}
+            <input class="buy {% if unrestricted|default(false) %}unrestricted{% endif %}" type="submit" value="{{ "Add to cart" | t }}" />
+          {% endif %}
+        </form>
+        {% if variant.stock <= 0 and variant.unlimitedStock == false %}
+          {% include 'partials/out_of_stock_modal.html' with {'product': item} %}
+        {% endif %}
+      {% endif %}
+    {% endfor  %}
+  </div>
 </li>
