--- a/craft/templates/commerce/cart.html
+++ b/craft/templates/commerce/cart.html
@@ -29,12 +29,23 @@
                   <input type="hidden" name="redirect" value="commerce/cart"/>
                   {{ getCsrfInput() }}
                   <input class="button link" type="submit" value="{{ "Empty the Cart" | t }}"/>
-                </form>
+                  <input type="hidden" name="action" value="commerce/cart/update-cart">
+                  <input type="hidden" name="cartUpdatedNotice" value="Added coupon code.">
 
+                </form>
               </td>
               <td>
               </td>
               <td class="text-right">
+                <form method="POST">
+                   <input type="hidden" name="action" value="commerce/cart/updateCart">
+                   <input type="hidden" name="redirect" value="commerce/cart">
+                   {{ getCsrfInput() }}
+                   <span class="{% if cart.getError('couponCode') %}has-error{% endif %}">
+                   <input type="text" name="couponCode" class="{% if cart.getError('couponCode') %}has-error{% endif %}" value="{{ cart.couponCode }}" placeholder="{{ "Coupon Code"|t }}">
+                   </span>
+                   <input type="submit" value="{% if cart.couponCode %}Change{% else %}Apply{% endif %} Coupon"/>
+              </form>
                 {% if cart.totalDiscount != '0' %}
                   {{ "Total" | t }} {{ "Discount" | t }}: {{ cart.totalDiscount|currency(currencyCode) }}<br>
                 {% endif %}
